[tool.poetry]
name = "flask-oidc"
version = "0.1.0"
description = ""
authors = ["flaviofernandes004 <flaviofernandes004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-oidc-ex = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

